# wallrs

./: .cargoignore  Cargo.toml  README.md
docs/: index.html  script.js  styles.css
example/: config.toml  keybindings.toml
src/: apply.rs  config.rs  input.rs  main.rs  mouse.rs  persistence.rs  tui.rs  wallpapers.rs
