[package]
name = "wallrs"
version = "0.1.0"
edition = "2024"
description = "TUI Wallpapers Manager"
license-file = "LICENSE"

[dependencies]
crossterm = "0.29.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
image = "0.25.8"
ratatui = "0.29.0"
ratatui-image = "8.0.2"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tiff = "0.10.3"
toml = "0.9.7"
viuer = { version = "0.9.2", features = ["print-file"] }
walkdir = "2.5.0"
