[package]
name = "wallrs"
version = "0.1.6"
edition = "2024"
description = "TUI Wallpapers Manager"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
image = "0.25.8"
ratatui = "0.29.0"
ratatui-image = "8.0.2"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tiff = "0.10.3"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
walkdir = "2.5.0"
